force-app/main/default/objects/Co_Op__c/Co_Op__c.object-meta.xml
<CustomObject>
    <label>Co Op</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Ops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>