force-app/main/default/objects/Co_Op__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <description>End Date of the activity.</description>
    <label>Activity End Date</label>
    <type>Date</type>
</CustomField>