force-app/main/default/objects/Co_Op__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <description>Stant date of Activity.</description>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>