force-app/main/default/objects/Co_Op__c/fields/Interact_Tools_Email__c.field-meta.xml
<CustomField>
    <fullName>Interact_Tools_Email__c</fullName>
    <description>To store Email address of Interact_Tools_Email.</description>
    <label>Interact Tools Email</label>
    <type>Email</type>
</CustomField>