force-app/main/default/objects/Co_Op__c/fields/Number_of_pages_to_follow__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pages_to_follow__c</fullName>
    <description>Number of supporting document.</description>
    <label>Number of pages to follow</label>
    <summaryForeignKey>Co_Op_Supporting_Document__c.Co_Op_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>