force-app/main/default/objects/Co_Op__c/fields/Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_Date__c</fullName>
    <label>Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>