force-app/main/default/objects/Co_Op__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Sum of all invoice cost included in the supporting document section.</description>
    <label>Total Cost</label>
    <summarizedField>Co_Op_Supporting_Document__c.Cost__c</summarizedField>
    <summaryForeignKey>Co_Op_Supporting_Document__c.Co_Op_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>