force-app/main/default/objects/Co_Op__c/validationRules/Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_validation</fullName>
    <active>true</active>
    <description>Validation on start date date i.e start date should be less than end date</description>
    <errorConditionFormula>Activity_Start_Date__c   &gt;  Activity_End_Date__c</errorConditionFormula>
    <errorDisplayField>Activity_Start_Date__c</errorDisplayField>
    <errorMessage>Activity start date should be less than Activity end date.</errorMessage>
</ValidationRule>